Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30052

QmlDesigner/editor3d does not build with Qt 6.7

    XMLWordPrintable

Details

    • a37458860 (12.0)

    Description

      03:05:36 /***/qt-creator/src/tools/qml2puppet/qml2puppet/editor3d/generalhelper.cpp:19:10: fatal error: QtQuick3DRuntimeRender/private/qssgrendercontextcore_p.h: No such file or directory
      03:05:36    19 | #include <QtQuick3DRuntimeRender/private/qssgrendercontextcore_p.h>
      03:05:36       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      03:05:36 compilation terminated.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes