QmlDesigner/editor3d: Fix build with Qt 6.7

rendercontextcore is now a public header

(qtquick3d 89ca37fb914c6539334df62b38ea8cee80dade9d)

Fixes: QTCREATORBUG-30052
Change-Id: I58ac699ed81e958c0a0fccd14385b3359be1fb08
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>